Add new submodule

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,14 +10,16 @@ if (POLICY CMP0167)
     cmake_policy(SET CMP0167 NEW)
 endif ()
 
+add_definitions(-fPIC)
+
 find_package(Boost 1.83 REQUIRED)
 find_package(OpenSSL REQUIRED)
 find_package(nlohmann_json CONFIG REQUIRED)
 find_package(spdlog CONFIG REQUIRED)
 find_package(magic_enum REQUIRED)
 
-include_directories(include vk_cpp_tools/include SYSTEM ${Boost_INCLUDE_DIR} ${OPENSSL_INCLUDE_DIR})
-add_subdirectory(vk_cpp_tools)
+include_directories(include vk_cpp_common/include SYSTEM ${Boost_INCLUDE_DIR} ${OPENSSL_INCLUDE_DIR})
+add_subdirectory(vk_cpp_common)
 
 set(HEADERS
         include/vk/okx/okx.h
@@ -39,9 +41,14 @@ set(SOURCES
         src/okx_futures_rest_client.cpp
         src/okx_http_session.cpp)
 
-add_library(okx_api OBJECT ${SOURCES} ${HEADERS})
+if (MODULE_MANAGER)
+    add_library(okx_api MODULE ${SOURCES} ${HEADERS})
+else ()
+    add_library(okx_api STATIC ${SOURCES} ${HEADERS})
+endif ()
+
 set_target_properties(okx_api PROPERTIES POSITION_INDEPENDENT_CODE 1)
-target_link_libraries(okx_api PRIVATE OpenSSL::Crypto OpenSSL::SSL vk_tools nlohmann_json::nlohmann_json)
+target_link_libraries(okx_api PRIVATE OpenSSL::Crypto OpenSSL::SSL vk_common nlohmann_json::nlohmann_json)
 target_compile_definitions(okx_api PUBLIC VERBOSE_LOG)
 
 add_executable(test test/main.cpp)
