--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,7 +19,10 @@ find_package(spdlog CONFIG REQUIRED)
 find_package(magic_enum REQUIRED)
 
 include_directories(include vk_cpp_common/include SYSTEM ${Boost_INCLUDE_DIR} ${OPENSSL_INCLUDE_DIR})
-add_subdirectory(vk_cpp_common)
+
+if (NOT TARGET vk_common)
+    add_subdirectory(vk_cpp_common)
+endif()
 
 set(HEADERS
         include/vk/okx/okx.h
@@ -51,5 +54,5 @@ set_target_properties(okx_api PROPERTIES POSITION_INDEPENDENT_CODE 1)
 target_link_libraries(okx_api PRIVATE OpenSSL::Crypto OpenSSL::SSL vk_common nlohmann_json::nlohmann_json)
 target_compile_definitions(okx_api PUBLIC VERBOSE_LOG)
 
-add_executable(test test/main.cpp)
-target_link_libraries(test PRIVATE spdlog::spdlog_header_only okx_api)
+add_executable(okx_test test/main.cpp)
+target_link_libraries(okx_test PRIVATE spdlog::spdlog_header_only okx_api)
