--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,7 +23,7 @@ include_directories(include vk_cpp_common/include SYSTEM ${Boost_INCLUDE_DIR} ${
 
 if (NOT TARGET vk_common)
     add_subdirectory(vk_cpp_common)
-endif()
+endif ()
 
 set(HEADERS
         include/vk/okx/okx.h
@@ -33,7 +33,8 @@ set(HEADERS
         include/vk/okx/okx_event_models.h
         include/vk/okx/okx_futures_ws_client.h
         include/vk/okx/okx_futures_ws_session.h
-        include/vk/okx/okx_ws_stream_manager.h)
+        include/vk/okx/okx_ws_stream_manager.h
+        include/vk/okx/okx_exchange_connector.h)
 
 set(SOURCES
         src/okx.cpp
@@ -43,7 +44,8 @@ set(SOURCES
         src/okx_ws_stream_manager.cpp
         src/okx_models.cpp
         src/okx_futures_rest_client.cpp
-        src/okx_http_session.cpp)
+        src/okx_http_session.cpp
+        src/okx_exchange_connector.cpp)
 
 if (MODULE_MANAGER)
     add_library(okx_api SHARED ${SOURCES} ${HEADERS})
