Refactor, spot support

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.20)
+cmake_minimum_required(VERSION 4.0)
 project(okx_api)
 
 set(CMAKE_CXX_STANDARD 20)
@@ -13,7 +13,7 @@ if (POLICY CMP0167)
     cmake_policy(SET CMP0167 NEW)
 endif ()
 
-find_package(Boost 1.83 REQUIRED)
+find_package(Boost 1.88 REQUIRED)
 find_package(OpenSSL REQUIRED)
 find_package(nlohmann_json CONFIG REQUIRED)
 find_package(spdlog CONFIG REQUIRED)
@@ -28,24 +28,25 @@ endif ()
 set(HEADERS
         include/vk/okx/okx.h
         include/vk/okx/okx_models.h
-        include/vk/okx/okx_futures_rest_client.h
+        include/vk/okx/okx_rest_client.h
         include/vk/okx/okx_http_session.h
         include/vk/okx/okx_event_models.h
-        include/vk/okx/okx_futures_ws_client.h
-        include/vk/okx/okx_futures_ws_session.h
+        include/vk/okx/okx_ws_client.h
+        include/vk/okx/okx_ws_session.h
         include/vk/okx/okx_ws_stream_manager.h
         include/vk/okx/okx_futures_exchange_connector.h)
 
 set(SOURCES
         src/okx.cpp
         src/okx_event_models.cpp
-        src/okx_futures_ws_client.cpp
-        src/okx_futures_ws_session.cpp
+        src/okx_ws_client.cpp
+        src/okx_ws_session.cpp
         src/okx_ws_stream_manager.cpp
         src/okx_models.cpp
-        src/okx_futures_rest_client.cpp
+        src/okx_rest_client.cpp
         src/okx_http_session.cpp
-        src/okx_futures_exchange_connector.cpp)
+        src/okx_futures_exchange_connector.cpp
+        include/vk/okx/okx_enums.h)
 
 if (MODULE_MANAGER)
     add_library(okx_api SHARED ${SOURCES} ${HEADERS})
